[gd_scene load_steps=7 format=2]

[ext_resource path="res://GameHUDRelated/PauseScreenPanel/MainPauseScreenPanel/Assets/MainPausePanel_TopBottomDecorSmall.png" type="Texture" id=1]
[ext_resource path="res://GameHUDRelated/PauseScreenPanel/MainPauseScreenPanel/Assets/MainPausePanel_BodyFillBackground.png" type="Texture" id=2]
[ext_resource path="res://GameHUDRelated/PauseScreenPanel/MainPauseScreenPanel/Assets/MainPausePanel_SideBorder.png" type="Texture" id=3]
[ext_resource path="res://GameHUDRelated/PauseScreenPanel/MainPauseScreenPanel/Assets/MainPausePanel_TopBottomDecorMedium.png" type="Texture" id=4]
[ext_resource path="res://GameHUDRelated/PauseScreenPanel/MainPauseScreenPanel/MainPauseScreenPanel.gd" type="Script" id=5]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/BackButtonStandard/PlayerGUI_BackButtonStandard.tscn" type="PackedScene" id=6]

[node name="MainPauseScreenPanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 100.0
margin_bottom = 164.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_left = 5.0
margin_right = 94.0
margin_bottom = 28.0
mouse_filter = 2
size_flags_horizontal = 6

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_top = 8.0
margin_right = 20.0
margin_bottom = 28.0
mouse_filter = 2
size_flags_vertical = 8
texture = ExtResource( 1 )

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 24.0
margin_right = 65.0
margin_bottom = 28.0
mouse_filter = 2
texture = ExtResource( 4 )

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 69.0
margin_top = 8.0
margin_right = 89.0
margin_bottom = 28.0
mouse_filter = 2
size_flags_vertical = 8
texture = ExtResource( 1 )

[node name="BodyContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 100.0
margin_bottom = 132.0
mouse_filter = 2

[node name="Middle" type="TextureRect" parent="VBoxContainer/BodyContainer"]
margin_right = 100.0
margin_bottom = 100.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
stretch_mode = 2

[node name="LeftSide" type="TextureRect" parent="VBoxContainer/BodyContainer"]
margin_right = 3.0
margin_bottom = 100.0
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 3
texture = ExtResource( 3 )
stretch_mode = 2

[node name="RightSide" type="TextureRect" parent="VBoxContainer/BodyContainer"]
margin_left = 97.0
margin_right = 100.0
margin_bottom = 100.0
mouse_filter = 2
size_flags_horizontal = 10
size_flags_vertical = 3
texture = ExtResource( 3 )
stretch_mode = 2

[node name="TopSide" type="TextureRect" parent="VBoxContainer/BodyContainer"]
margin_right = 100.0
margin_bottom = 3.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="BottomSide" type="TextureRect" parent="VBoxContainer/BodyContainer"]
margin_top = 97.0
margin_right = 100.0
margin_bottom = 100.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 10
texture = ExtResource( 3 )
stretch_mode = 2

[node name="ContentPanel" type="MarginContainer" parent="VBoxContainer/BodyContainer"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_top = 25
custom_constants/margin_left = 5
custom_constants/margin_bottom = 15

[node name="BackButton" parent="VBoxContainer/BodyContainer" instance=ExtResource( 6 )]
margin_left = 77.0
margin_right = 100.0
margin_bottom = 23.0
size_flags_horizontal = 10
size_flags_vertical = 2
custom_constants/margin_right = 4
custom_constants/margin_top = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_left = 5.0
margin_top = 136.0
margin_right = 94.0
margin_bottom = 164.0
mouse_filter = 2
size_flags_horizontal = 6

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
margin_right = 20.0
margin_bottom = 28.0
mouse_filter = 2
texture = ExtResource( 1 )

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
margin_left = 24.0
margin_right = 65.0
margin_bottom = 28.0
mouse_filter = 2
texture = ExtResource( 4 )

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
margin_left = 69.0
margin_right = 89.0
margin_bottom = 28.0
mouse_filter = 2
texture = ExtResource( 1 )
[connection signal="on_button_released_with_button_left" from="VBoxContainer/BodyContainer/BackButton" to="." method="_on_BackButton_on_button_released_with_button_left"]
